--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,17 @@
         android:onClick="weeklyAction"
         android:textSize="20sp"/>
 
+    <Button
+        android:id="@+id/button5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:background="@null"
+        android:text="Lists"
+        android:textColor="@color/blue"
+        android:textSize="20sp"
+        android:onClick="listAction"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
