--- a/app/src/main/res/layout/event_cell.xml
+++ b/app/src/main/res/layout/event_cell.xml
@@ -3,17 +3,30 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="60dp">
+    android:layout_height="wrap_content">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:gravity="center"
         android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
         android:id="@+id/eventCellTV"
         android:textSize="20sp"
         android:textColor="@color/black"
-        android:text="Event"/>
+        android:text="Event"
+        android:textStyle="bold"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:layout_marginStart="20dp"
+        android:id="@+id/secondCellTV"
+        android:textSize="20sp"
+        android:textColor="@color/black"
+        android:text="Time"
+        android:layout_marginTop="10dp"/>
 
 
 </LinearLayout>
