--- a/app/src/main/res/layout/activity_list_view.xml
+++ b/app/src/main/res/layout/activity_list_view.xml
@@ -4,14 +4,35 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <ListView
+    <TextView
+        android:id="@+id/toDoTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="To-Do List"
+        android:textSize="25dp"
+        android:textStyle="bold"
+        android:textColor="@color/blue"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="20dp"/>
+
+    <FrameLayout
+        android:id="@+id/divAlign"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:layout_alignTop="@+id/toDoTitle"/>
+
+    <ListView
         android:id="@+id/lvItems"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/btnAddItem"
+        android:layout_alignTop="@+id/divAlign"
         android:layout_alignParentStart="true"
-        android:layout_above="@+id/btnAddItem" />
+        android:layout_alignParentLeft="true"
+        android:layout_marginStart="-1dp"
+        android:layout_marginLeft="-1dp"
+        android:layout_marginTop="35dp"
+        android:layout_marginBottom="-35dp" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -33,6 +54,8 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:onClick="onAddItem"/>
+        android:onClick="onAddItem"
+        android:background="@color/blue"
+        android:textColor="@color/white"/>
 
 </RelativeLayout>
