final changes to user story 4

--- a/app/src/main/res/layout/event_cell.xml
+++ b/app/src/main/res/layout/event_cell.xml
@@ -28,5 +28,16 @@
         android:text="Time"
         android:layout_marginTop="10dp"/>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:layout_marginStart="20dp"
+        android:id="@+id/locationCellTV"
+        android:textSize="20sp"
+        android:textColor="@color/black"
+        android:text="Location"
+        android:layout_marginTop="10dp"/>
+
 
 </LinearLayout>
