--- a/app/src/main/res/layout/activity_event_edit.xml
+++ b/app/src/main/res/layout/activity_event_edit.xml
@@ -14,9 +14,10 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="40dp"
-        android:text="Name:"
+        android:text="Exam Name:"
         android:textSize="20sp"
         android:textAlignment="center"
+        android:textStyle="bold"
         android:textColor="@color/black"/>
 
     <EditText
@@ -34,7 +35,19 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
-        android:text="Date:"
+        android:text="Exam Date:"
+        android:textStyle="bold"
+        android:textSize="20sp"
+        android:textAlignment="center"
+        android:textColor="@color/black"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="40dp"
+        android:text="Exam Time:"
+        android:textStyle="bold"
         android:textSize="20sp"
         android:textAlignment="center"
         android:textColor="@color/black"/>
@@ -59,11 +72,31 @@
         android:layout_height="wrap_content"
         android:text="Select Exam Time"
         android:textSize="20dp"
-        android:width="200dp"
-        android:height="100dp"
+        android:width="230dp"
         android:background="#1575eb"
         android:textColor="@color/white"
         android:layout_gravity="center"/>
+
+    <TextView
+        android:id="@+id/eventLocationTV"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="40dp"
+        android:text="Add Location:"
+        android:textStyle="bold"
+        android:textSize="20sp"
+        android:textAlignment="center"
+        android:textColor="@color/black"/>
+
+    <EditText
+        android:id="@+id/eventLocationET"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:textSize="20sp"
+        android:ems="10"
+        android:inputType="text"/>
 
     <Button
         android:layout_marginTop="20dp"
