--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="darkGray">#333533</color>
     <color name="lightGray">#EEE</color>
+    <color name="proj1Blue">#1575eb</color>
 </resources>
