--- a/app/src/main/res/layout/activity_list_view.xml
+++ b/app/src/main/res/layout/activity_list_view.xml
@@ -4,35 +4,48 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/toDoTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="To-Do List"
-        android:textSize="25dp"
-        android:textStyle="bold"
-        android:textColor="@color/blue"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="20dp"/>
-
-    <FrameLayout
-        android:id="@+id/divAlign"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:layout_alignTop="@+id/toDoTitle"/>
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:id="@+id/toDoTitle"
+        android:layout_marginTop="15dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="To-Do List"
+            android:textSize="25dp"
+            android:textStyle="bold"
+            android:textColor="@color/proj1Blue"
+            android:layout_marginLeft="20dp"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:layout_marginLeft="140dp"
+            android:background="@null"
+            android:gravity="top"
+            android:onClick="backToHomeToDo"
+            android:text="Back to Home"
+            android:textColor="@color/proj1Blue"
+            android:textSize="15sp"
+            android:textStyle="italic" />
+
+    </LinearLayout>
+
 
     <ListView
         android:id="@+id/lvItems"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/btnAddItem"
-        android:layout_alignTop="@+id/divAlign"
+        android:layout_below="@+id/toDoTitle"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
-        android:layout_marginStart="-1dp"
-        android:layout_marginLeft="-1dp"
-        android:layout_marginTop="35dp"
-        android:layout_marginBottom="-35dp" />
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="60dp"/>
 
     <EditText
         android:layout_width="wrap_content"
@@ -44,6 +57,7 @@
         android:layout_alignParentStart="true"
         android:layout_toLeftOf="@+id/btnAddItem"
         android:layout_toStartOf="@+id/btnAddItem"
+        android:background="@color/white"
         android:layout_alignParentBottom="true" />
 
     <Button
@@ -55,7 +69,7 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:onClick="onAddItem"
-        android:background="@color/blue"
+        android:background="@color/proj1Blue"
         android:textColor="@color/white"/>
 
 </RelativeLayout>
