--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,56 +8,116 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <Button
-        android:layout_width="wrap_content"
+    <TextView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="Weekly"
-        android:textColor="@color/blue"
-        android:background="@null"
+        android:text="Welcome!!"
+        android:gravity="center"
+        android:textSize="25dp"
         android:textStyle="bold"
-        android:onClick="weeklyAction"
-        android:textSize="20sp"/>
+        android:textColor="@color/black"
+        android:layout_marginTop="15dp"/>
 
-    <Button
-        android:id="@+id/button6"
-        android:layout_width="wrap_content"
+    <TextView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="Classes"
-        android:textColor="@color/blue"
-        android:background="@null"
+        android:text="Click below to view a list."
+        android:gravity="center"
+        android:textSize="15dp"
+        android:textStyle="italic"
+        android:textColor="@color/black"
+        android:layout_marginTop="5dp"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="20dp">
+        <Button
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:text="Exams"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:onClick="weeklyAction"
+            android:textSize="20sp"
+            android:layout_marginLeft="35dp"
+            android:layout_marginRight="35dp"
+            android:background="@color/proj1Blue"/>
+
+        <Button
+            android:id="@+id/button6"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:text="Classes"
+            android:textColor="@color/white"
+            android:background="@color/proj1Blue"
+            android:textStyle="bold"
+            android:onClick="classAction"
+            android:textSize="20sp"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="20dp">
+        <Button
+            android:id="@+id/assignmentButton"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="Assignments"
+            android:textColor="@color/white"
+            android:background="@color/proj1Blue"
+            android:textStyle="bold"
+            android:onClick="assignmentAction"
+            android:textSize="18sp"
+            android:layout_marginLeft="35dp"
+            android:layout_marginRight="35dp"/>
+
+        <Button
+            android:id="@+id/button5"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@color/proj1Blue"
+            android:text="Lists"
+            android:textStyle="bold"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            android:onClick="listAction"/>
+    </LinearLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Your Calendar"
+        android:gravity="center"
+        android:textSize="22dp"
         android:textStyle="bold"
-        android:onClick="classAction"
-        android:textSize="20sp"/>
-
-    <Button
-        android:id="@+id/button5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:background="@null"
-        android:text="Lists"
-        android:textColor="@color/blue"
-        android:textSize="20sp"
-        android:onClick="listAction"/>
+        android:textColor="@color/black"
+        android:layout_marginTop="30dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginBottom ="20dp"
-        android:layout_marginTop="20dp">
+        android:layout_marginTop="5dp">
         <Button
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/backward"
-            android:textColor="@color/blue"
+            android:textColor="@color/proj1Blue"
             android:background="@null"
             android:textStyle="bold"
             android:onClick="previousMonthAction"
-            android:textSize="20sp"/>
+            android:textSize="20sp" />
 
         <TextView
             android:layout_width="0dp"
@@ -74,7 +134,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/forward"
-            android:textColor="@color/blue"
+            android:textColor="@color/proj1Blue"
             android:background="@null"
             android:textStyle="bold"
             android:onClick="nextMonthAction"
