--- a/app/src/main/res/layout/dialog_add_edit_class.xml
+++ b/app/src/main/res/layout/dialog_add_edit_class.xml
@@ -8,43 +8,67 @@
         android:id="@+id/etCourseName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Course Name and Section"/>
+        android:hint="Course Name and Section"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"/>
 
     <EditText
         android:id="@+id/etProfessor"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Professor"/>
+        android:hint="Professor"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"/>
 
     <EditText
         android:id="@+id/etTime"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Time"/>
+        android:hint="Time"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"/>
 
     <EditText
         android:id="@+id/etDays"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Days"/>
+        android:hint="Days"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"/>
     <EditText
         android:id="@+id/etLocation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Location and Room Number"/>
+        android:hint="Location and Room Number"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"/>
 
 
     <!-- Add EditText fields for other class details (instructor, location, etc.) -->
 
-    <Button
-        android:id="@+id/btnSave"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Save" />
+        android:gravity="center"
+        android:layout_marginTop="10dp"
+        android:orientation="horizontal"
+        android:layout_marginBottom="15dp">
+        <Button
+            android:id="@+id/btnCancel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Cancel"
+            android:background="#e3e3e3"
+            android:layout_marginRight="5dp"/>
+        <Button
+            android:id="@+id/btnSave"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/proj1Blue"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:text="Save"
+            android:layout_marginLeft="5dp"/>
+    </LinearLayout>
 
-    <Button
-        android:id="@+id/btnCancel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Cancel" />
 </LinearLayout>
