--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -26,5 +26,6 @@
         android:layout_marginLeft="8dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
-        android:textSize="16sp"/>
+        android:textSize="16sp"
+        android:layout_marginBottom="10dp"/>
 </RelativeLayout>
