--- a/app/src/main/res/layout/activity_event_edit.xml
+++ b/app/src/main/res/layout/activity_event_edit.xml
@@ -6,10 +6,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".activity_event_edit">
+    tools:context=".activity_exam_event">
 
     <TextView
-        android:id="@+id/eventNameTV"
+        android:id="@+id/eventNameText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -21,7 +21,7 @@
         android:textColor="@color/black"/>
 
     <EditText
-        android:id="@+id/eventNameET"
+        android:id="@+id/eventNameEdit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -30,7 +30,7 @@
         android:inputType="text"/>
 
     <TextView
-        android:id="@+id/eventDateTV"
+        android:id="@+id/eventDateText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -67,7 +67,7 @@
 
     <Button
         android:id="@+id/timeButton"
-        android:onClick="popTimePicker"
+        android:onClick="selectTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Select Exam Time"
@@ -78,7 +78,7 @@
         android:layout_gravity="center"/>
 
     <TextView
-        android:id="@+id/eventLocationTV"
+        android:id="@+id/eventLocationText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -90,7 +90,7 @@
         android:textColor="@color/black"/>
 
     <EditText
-        android:id="@+id/eventLocationET"
+        android:id="@+id/eventLocationEdit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -112,7 +112,7 @@
         android:textSize="20sp"/>
 
     <TextView
-        android:id="@+id/eventTimeTV"
+        android:id="@+id/timeNowText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
