--- a/app/src/main/res/layout/activity_week_view.xml
+++ b/app/src/main/res/layout/activity_week_view.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".activity_week_view">
+    tools:context=".activity_exam_page">
 
     <Button
         android:layout_width="wrap_content"
@@ -55,7 +55,7 @@
 
         <TextView
             android:layout_width="0dp"
-            android:id="@+id/monthYearTV"
+            android:id="@+id/monthYearText"
             android:layout_weight="2"
             android:layout_height="wrap_content"
             android:text="Feb 2021"
