--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="darkGray">#333533</color>
-    <color name="lightGray">#EEE</color>
+    <color name="lightGray">#e1e3e6</color>
     <color name="proj1Blue">#1575eb</color>
 </resources>
